--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -2,13 +2,13 @@
     font-family: 'HanSerif';
     font-weight: normal;
     font-style: normal;
-    src: url('https://cdn.rawgit.com/builtforpig/pigpen/raw/master/webfonts/HanSerif.woff') format('woff');
-    src: url('https://cdn.rawgit.com/builtforpig/pigpen/raw/master/webfonts/HanSerif.woff2') format('woff2');
+    url('https://github.com/builtforpig/pigpen/raw/master/webfonts/HanSerif.woff') format('woff');
+    url('https://github.com/builtforpig/pigpen/raw/master/webfonts/HanSerif.woff2') format('woff2');
 }
 @font-face {
     font-family: 'HanSerifChe';
     font-weight: normal;
     font-style: normal;
-    src: url('https://cdn.rawgit.com/builtforpig/pigpen/raw/master/webfonts/HanSerifChe.woff') format('woff');
-    src: url('https://cdn.rawgit.com/builtforpig/pigpen/raw/master/webfonts/HanSerifChe.woff2') format('woff2');
+    url('https://github.com/builtforpig/pigpen/raw/master/webfonts/HanSerifChe.woff') format('woff');
+    url('https://github.com/builtforpig/pigpen/raw/master/webfonts/HanSerifChe.woff2') format('woff2');
 }
