--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -1,14 +1,28 @@
 @font-face {
-    font-family: 'HanSerif';
+    font-family: 'HanBatang';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/dcb0ee37363dd67e08e95f18429da805ed57556a/webfonts/HanSerif.woff') format('woff');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/dcb0ee37363dd67e08e95f18429da805ed57556a/webfonts/HanSerif.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatang.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatang.woff2') format('woff2');
 }
 @font-face {
-    font-family: 'HanSerifChe';
+    font-family: 'HanBatangChe';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/dcb0ee37363dd67e08e95f18429da805ed57556a/webfonts/HanSerifChe.woff') format('woff');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/dcb0ee37363dd67e08e95f18429da805ed57556a/webfonts/HanSerifChe.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatangChe.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatangChe.woff2') format('woff2');
+}
+@font-face {
+    font-family: 'HanDotum';
+    font-weight: normal;
+    font-style: normal;
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanDotum.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanDotum.woff2') format('woff2');
+}
+@font-face {
+    font-family: 'HanGulim';
+    font-weight: normal;
+    font-style: normal;
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanGulim.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanGulim.woff2') format('woff2');
 }
