--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -2,6 +2,7 @@
     font-family: 'HanBatang';
     font-weight: normal;
     font-style: normal;
+    font-display: fallback;
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatang.woff2') format('woff2');
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatang.woff') format('woff');
 }
@@ -9,6 +10,7 @@
     font-family: 'HanBatangChe';
     font-weight: normal;
     font-style: normal;
+    font-display: fallback;
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatangChe.woff2') format('woff2');
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanBatangChe.woff') format('woff');
 }
@@ -16,6 +18,7 @@
     font-family: 'HanDotum';
     font-weight: normal;
     font-style: normal;
+    font-display: fallback;    
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanDotum.woff2') format('woff2');
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanDotum.woff') format('woff');
 }
@@ -23,6 +26,7 @@
     font-family: 'HanGulim';
     font-weight: normal;
     font-style: normal;
+    font-display: fallback;    
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanGulim.woff2') format('woff2');
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/730bfbf41fbdbdb80a2aa1c6b76d840176a7fedb/webfonts/HanGulim.woff') format('woff');
 }
