--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -1,35 +1,35 @@
 @font-face {
-    font-family: 'HanBatang';
+    font-family: 'WebBatang';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanBatang.woff2') format('woff2');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanBatang.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebBatang.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebBatang.woff') format('woff');
 }
 @font-face {
-    font-family: 'HanBatangChe';
+    font-family: 'WebBatangChe';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanBatangChe.woff2') format('woff2');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanBatangChe.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebBatangChe.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebBatangChe.woff') format('woff');
 }
 @font-face {
-    font-family: 'HanDotum';
+    font-family: 'WebDotum';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanDotum.woff2') format('woff2');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanDotum.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebDotum.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebDotum.woff') format('woff');
 }
 @font-face {
-    font-family: 'HanGulim';
+    font-family: 'WebGulim';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanGulim.woff2') format('woff2');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanGulim.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebGulim.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebGulim.woff') format('woff');
 }
 @font-face {
-    font-family: 'HanCodeSans';
+    font-family: 'WebHanSans';
     font-weight: normal;
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanCodeSans.woff2') format('woff2');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/HanCodeSans.woff') format('woff');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebHanSans.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/9bae31f5a11df63c257618f50e36b2d4cf776de3/webfonts/WebHanSans.woff') format('woff');
 }
