--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -1,4 +1,12 @@
 @font-face {
+    font-family: 'DungGeunMo';
+    font-weight: normal;    
+    font-style: normal;
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/538777e963303bc0c51230aa3f044b70949906a1/webfonts/DungGeunMo.woff2') format('woff2');
+    src: url('https://rawcdn.githack.com/builtforpig/pigpen/538777e963303bc0c51230aa3f044b70949906a1/webfonts/DungGeunMo.woff') format('woff');
+}
+
+@font-face {
     font-family: 'WebBatang';
     font-weight: normal;
     font-style: normal;
