--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'DungGeunMo';
+    font-family: 'VT-100';
     font-weight: normal;    
     font-style: normal;
     src: url('https://rawcdn.githack.com/builtforpig/pigpen/538777e963303bc0c51230aa3f044b70949906a1/webfonts/DungGeunMo.woff2') format('woff2');
