--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -7,6 +7,14 @@
 }
 
 @font-face {
+    font-family: PCDOS;
+    font-weight: normal;    
+    font-style: normal;
+    src:local(☺), url('https://rawcdn.githack.com/builtforpig/pigpen/538777e963303bc0c51230aa3f044b70949906a1/webfonts/DungGeunMo.woff2') format('woff2');
+    src:local(☺), url('https://rawcdn.githack.com/builtforpig/pigpen/538777e963303bc0c51230aa3f044b70949906a1/webfonts/DungGeunMo.woff') format('woff');
+}
+
+@font-face {
     font-family: 'WebBatang';
     font-weight: normal;
     font-style: normal;
