--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -2,6 +2,14 @@
     font-family: vt100;
     font-weight: normal;    
     font-style: normal;
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/5435efb4fb36fdc1c53f180ebba79258ca119339/webfonts/DungGeunMo.woff2') format('woff2');
-    src: url('https://rawcdn.githack.com/builtforpig/pigpen/5435efb4fb36fdc1c53f180ebba79258ca119339/webfonts/DungGeunMo.woff') format('woff');
+    src: url('https://builtforpig.github.io/webfonts/DungGeunMo.woff2') format('woff2');
+    src: url('https://builtforpig.github.io/webfonts/DungGeunMo.woff') format('woff');
+}
+
+@font-face {
+    font-family: vt100;
+    font-weight: normal;    
+    font-style: normal;
+    src: url('https://builtforpig.github.io/webfonts/DOSMyungjo.woff2') format('woff2');
+    src: url('https://builtforpig.github.io/webfonts/DOSMyungjo.woff') format('woff');
 }
