--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'HBIOS949';
+    font-family: 'HBIOS';
     font-weight: normal;    
     font-style: normal;
     src:local(☺), url('https://builtforpig.github.io/webfonts/HBIOS949.woff2') format('woff2');
