--- a/webfonts/style.css
+++ b/webfonts/style.css
@@ -2,15 +2,15 @@
     font-family: 'HBIOS';
     font-weight: normal;    
     font-style: normal;
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HBIOS949.woff2') format('woff2');
-    src:local(☺), url('https://builtforpig.github.io/webfonts/HBIOS949.woff') format('woff');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HBIOS_CP949.woff2') format('woff2');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/HBIOS_CP949.woff') format('woff');
 }
 @font-face {
     font-family: 'CP437';
     font-weight: normal;    
     font-style: normal;
-    src:local(☺), url('https://builtforpig.github.io/webfonts/CP437.woff2') format('woff2');
-    src:local(☺), url('https://builtforpig.github.io/webfonts/CP437.woff') format('woff');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff2') format('woff2');
+    src:local(☺), url('https://builtforpig.github.io/webfonts/USOEM_CP437.woff') format('woff');
 }
 @font-face {
     font-family: 'Mono Boot';
